--- a/locustchart/templates/comm-service.yaml
+++ b/locustchart/templates/comm-service.yaml
@@ -1,15 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "locust.master-service-comm" . }}
+  name: {{ template "locust.coordinator-service-api" . }}
   labels:
     {{- include "locust.labels" . | nindent 4 }}
 spec:
   type: ClusterIP
   ports:
-    - port: {{ .Values.master.commPort }}
-      targetPort: {{ .Values.master.commPort }}
+    - port: {{ .Values.locust.locustPort }}
+      targetPort: {{ .Values.locust.locustPort }}
       protocol: TCP
-{{/*      name: external-locust-master-port*/}}
+{{/*      name: external-locust-coordinator-port*/}}
   selector:
     {{- include "locust.selectorLabels" . | nindent 4 }}
