Renaming deployment file

--- a/locustchart/templates/coordinator-deployment.yaml
+++ b/locustchart/templates/coordinator-deployment.yaml
@@ -40,7 +40,7 @@ spec:
             - name: web-port
               containerPort: {{ .Values.locust.webPort }}
               protocol: TCP
-            - name: coordinator-port
+            - name: locust-port
               containerPort: {{ .Values.locust.locustPort }}
               protocol: TCP
           resources:
